--- a/templates/avengers.html
+++ b/templates/avengers.html
@@ -3,16 +3,17 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-   <p> Guitar Hero Live </p>
+   <p> The Avengers </p>
  
-<img src="/static/guitarherolive.jpg" alt="Guitar Hero Live" align="left"
+<img src="/static/avengers.jpg" alt="The Avengers" align="left"
 style="width:500px;height:620px;">
 
 <style>
@@ -30,8 +31,8 @@ font-size: 20px;
 <br>
 
 <b>Summary:</b>
-<em> Guitar Hero Live is a music game where you use a pysical guitar controller
-to play real world music tracks to a virtural audiance and ratings system.
+<em> The Avengers is a 2012 American superhero film based on the Marvel Comics
+superhero team of the same name.
 
 <br>
 <br>
@@ -40,26 +41,52 @@ to play real world music tracks to a virtural audiance and ratings system.
 
 </em>
 <b>Release Year:</b>
-<em> 20/10/15 </em>
+<em> 04/05/12 </em>
 
 <br>
 <br>
 <br><br>
 
-<b>Developer:</b>
-<em> FreeStyleGames</em>
+<b>Director:</b>
+<em> Joss Whedon</em>
 
 <br>
 <br>
 <br>
 <br>
 
-<b> Platform(s):</b>
-<em>Xbox One, Playstation 4, Wii U</em>
+<b> Starring:</b>
+<em>Robert Downey Jr, Chris Evans, Mark Ruffalo, Chris Hemsworth, Scarlett
+Johansson, Jeremy Renner, Tom Hiddleston, Samuel L. Jackson</em>
 
 <br>
 <br>
-<br>
-<br>
+
+<form  action="/basket/"
+method="post">
+<input type="hidden" name="business" value="kin@kinskards.com">
+
+<input type="hidden" name="cmd" value="_cart">
+<input type="hidden" name="add" value="1">
+
+<input type="hidden" name="item_name"  value="Item">
+<input type="hidden" name="amount" value="3.95">
+<input type="hidden" name="currency_code" value="USD">
+
+<input type="hidden" name="on0" value="Color">
+  <select name="os0" id="os0">
+    <option value="Select a Platform">-- Select a Platform --</option>
+    <option value="DVD">DVD</option>
+    <option value="Blu Ray">Blu Ray</option>
+  </select>
+
+ <BR><BR><BR> <input type="image" name="submit"
+
+src="/static/basket.jpg"
+   alt="Add to Cart" width="400" height="75">
+  <img alt="" width="1" height="1"
+   src="https://ww.paypalobjects.com/en_US/i/scr/pixel.gif" > <BR>
+</form>
+
 
 {% endblock %}
