--- a/templates/exmachina.html
+++ b/templates/exmachina.html
@@ -3,16 +3,17 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-   <p> No Man's Sky  </p>
+   <p> Ex Machina</p>
  
-<img src="/static/nomanssky.jpg" alt="No Man's Sky" align="left"
+<img src="/static/exmachina.jpg" alt="Ex Machina" align="left"
 style="width:500px;height:620px;">
 
 <style>
@@ -30,11 +31,9 @@ font-size: 20px;
 <br>
 
 <b>Summary:</b>
-<em> No Man's Sky is an action-adventure survival game that is built on four
-ganeplay pillars: exploration, survival, combat and trading. Players are free
-to perform within the entirety of a procedurally generated deterministic open
-universe, which includes over 18 quintillion planets, many with their own sets
-of flora and fauna.
+<em> Ex Machina is an independent science fiction psychological thriller that
+revolves around a programmer invited by his CEO to administer the Turing test
+to an intelligent humanoid robot.
 
 <br>
 <br>
@@ -43,26 +42,50 @@ of flora and fauna.
 
 </em>
 <b>Release Year:</b>
-<em> 10/09/2016 </em>
+<em> 21/01/15</em>
 
 <br>
 <br>
 <br><br>
 
-<b>Developer:</b>
-<em> Hello Games</em>
+<b>Director:</b>
+<em> Alex Garland</em>
 
 <br>
 <br>
 <br>
 <br>
 
-<b> Platform(s):</b>
-<em>Playstation 4</em>
+<b> Starring:</b>
+<em>Alcia Vikander, Domhnall Gleeson, Oscar Isaac</em>
 
 <br>
 <br>
-<br>
-<br>
+
+<form  action="/basket/"
+method="post">
+<input type="hidden" name="business" value="kin@kinskards.com">
+
+<input type="hidden" name="cmd" value="_cart">
+<input type="hidden" name="add" value="1">
+
+<input type="hidden" name="item_name"  value="Item">
+<input type="hidden" name="amount" value="3.95">
+<input type="hidden" name="currency_code" value="USD">
+
+<input type="hidden" name="on0" value="Color">
+  <select name="os0" id="os0">
+    <option value="Select a Platform">-- Select a Platform --</option>
+    <option value="DVD">DVD</option>
+    <option value="Blu Ray">Blu Ray</option>
+  </select>
+
+ <BR><BR><BR> <input type="image" name="submit"
+
+src="/static/basket.jpg"
+   alt="Add to Cart" width="400" height="75">
+  <img alt="" width="1" height="1"
+   src="https://ww.paypalobjects.com/en_US/i/scr/pixel.gif" > <BR>
+</form>
 
 {% endblock %}
