--- a/templates/falloutboy.html
+++ b/templates/falloutboy.html
@@ -3,17 +3,18 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-   <p> Killer Instinct </p>
+   <p> Fall out Boy </p>
  
-<img src="/static/killerinstinct.jpg" alt="Killer Instinct" align="left"
-style="width:500px;height:620px;">
+<img src="/static/falloutboy.jpg" alt="Fallout Boy" align="left"
+style="width:620px;height:620px;">
 
 <style>
 
@@ -30,9 +31,7 @@ font-size: 20px;
 <br>
 
 <b>Summary:</b>
-<em> Killer Instinct is a fighting game that is a reboot of the series. The
-gane retains its tranditional combo-based gameplay. It offers a wide variety of
-characters for you to play as.
+<em> Greatest Hits
 
 <br>
 <br>
@@ -41,26 +40,45 @@ characters for you to play as.
 
 </em>
 <b>Release Year:</b>
-<em> 22/11/2013 </em>
+<em> 17/11/2009 </em>
 
 <br>
 <br>
 <br><br>
 
-<b>Developer:</b>
-<em> Double Helix</em>
+<b>Genre:</b>
+<em> Pop Rock</em>
 
 <br>
 <br>
 <br>
 <br>
 
-<b> Platform(s):</b>
-<em>Xbox One</em>
+<b> Band Members:</b>
+<em>Pete Wentz, Patrick Stump, Andy Hurley</em>
 
 <br>
 <br>
-<br>
-<br>
+
+<form  action="/basket/"
+method="post">
+<input type="hidden" name="business" value="kin@kinskards.com">
+
+<input type="hidden" name="cmd" value="_cart">
+<input type="hidden" name="add" value="1">
+
+<input type="hidden" name="item_name"  value="Item">
+<input type="hidden" name="amount" value="3.95">
+<input type="hidden" name="currency_code" value="USD">
+
+ <BR><BR><BR> <input type="image" name="submit"
+
+src="/static/basket.jpg"
+   alt="Add to Cart" width="400" height="75">
+  <img alt="" width="1" height="1"
+   src="https://ww.paypalobjects.com/en_US/i/scr/pixel.gif" > <BR>
+</form>
+
+
 
 {% endblock %}
