--- a/templates/foofighters.html
+++ b/templates/foofighters.html
@@ -3,17 +3,18 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-   <p> Batman: Arkham Knight </p>
+   <p> Foo Fighters </p>
  
-<img src="/static/arkhamknight.jpg" alt="Batman: Arkham Knight" align="left"
-style="width:500px;height:620px;">
+<img src="/static/foofighters.jpg" alt="Foo Fighters" align="left"
+style="width:620px;height:620px;">
 
 <style>
 
@@ -30,11 +31,7 @@ font-size: 20px;
 <br>
 
 <b>Summary:</b>
-<em> Batman: Arhkam Knight is an action-adventure game that is loosly based on
-the comic book mythos. The game's main storyline follows Batman as he confronts
-Scarecrow, who has launched an attack on Gothan City, causing a city-wide
-evacuation. Scarecrow, with the help of the mysterious Arkham Knight, is also
-able to unite Batman's greatest foes in an attempt to finally destroy Batman.
+<em> Greatist Hits
 <br>
 <br>
 <br>
@@ -42,26 +39,46 @@ able to unite Batman's greatest foes in an attempt to finally destroy Batman.
 
 </em>
 <b>Release Year:</b>
-<em> 23/06/2015<em>
+<em> 03/11/2009<em>
 
 <br>
 <br>
 <br><br>
 
-<b>Developer:</b>
-<em> Rocksteady Studios</em>
+<b>Genre:</b>
+<em> Rock</em>
 
 <br>
 <br>
 <br>
 <br>
 
-<b> Platform(s):</b>
-<em>Xbox One, Playstation 4</em>
+<b> Memebers:</b>
+<em>Dave Grohl, Pat Smear, Nate Mendel, Taylor Hawkins, Chris Shiflett</em>
 
 <br>
 <br>
-<br>
-<br>
+
+<form  action="/basket/"
+method="post">
+<input type="hidden" name="business" value="kin@kinskards.com">
+
+<input type="hidden" name="cmd" value="_cart">
+<input type="hidden" name="add" value="1">
+
+<input type="hidden" name="item_name"  value="Item">
+<input type="hidden" name="amount" value="3.95">
+<input type="hidden" name="currency_code" value="USD">
+
+
+
+ <BR><BR><BR> <input type="image" name="submit"
+
+src="/static/basket.jpg"
+   alt="Add to Cart" width="400" height="75">
+  <img alt="" width="1" height="1"
+   src="https://ww.paypalobjects.com/en_US/i/scr/pixel.gif" > <BR>
+</form>
+
 
 {% endblock %}
