--- a/templates/godfather.html
+++ b/templates/godfather.html
@@ -3,16 +3,17 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-   <p> Sonic Lost World </p>
+   <p> The Godfather </p>
  
-<img src="/static/soniclostworld.jpg" alt="Sonic Lost World" align="left"
+<img src="/static/godfather.jpg" alt="The Godfather" align="left"
 style="width:500px;height:620px;">
 
 <style>
@@ -30,10 +31,8 @@ font-size: 20px;
 <br>
 
 <b>Summary:</b>
-<em> Sonic Lost World is an action-adventure/platform game that focuses on the
-efforts of Sonic the Hedgehog to stop the Deadly six, an alien tribe that
-serves as the games's man antagonists, as they seek to siphon engery from the
-Lost Hex, the game's setting.
+<em> The Godfather is an American crime drama that focuses on the leaders of a
+fictional New York crime family.
 
 <br>
 <br>
@@ -42,27 +41,52 @@ Lost Hex, the game's setting.
 
 </em>
 <b>Release Year:</b>
-<em> 27/10/2015 </em>
+<em> 24/03/1972</em>
 
 <br>
 <br>
 <br>
 <br>
 
-<b>Developer:</b>
-<em> 18/10/2013</em>
+<b>Director:</b>
+<em> Francis Ford Coppola</em>
 
 <br>
 <br>
 <br>
 <br>
 
-<b> Platform(s):</b>
-<em>Wii U</em>
+<b> Starring:</b>
+<em>Marlon Brando, Al Pacino, James Caan</em>
 
 <br>
 <br>
-<br>
-<br>
+
+<form  action="/basket/"
+method="post">
+<input type="hidden" name="business" value="kin@kinskards.com">
+
+<input type="hidden" name="cmd" value="_cart">
+<input type="hidden" name="add" value="1">
+
+<input type="hidden" name="item_name"  value="Item">
+<input type="hidden" name="amount" value="3.95">
+<input type="hidden" name="currency_code" value="USD">
+
+<input type="hidden" name="on0" value="Color">
+  <select name="os0" id="os0">
+    <option value="Select a Platform">-- Select a Platform --</option>
+    <option value="DVD">DVD</option>
+    <option value="Blu Ray">Blu Ray</option>
+  </select>
+
+ <BR><BR><BR> <input type="image" name="submit"
+
+src="/static/basket.jpg"
+   alt="Add to Cart" width="400" height="75">
+  <img alt="" width="1" height="1"
+   src="https://ww.paypalobjects.com/en_US/i/scr/pixel.gif" > <BR>
+</form>
+
 
 {% endblock %}
