--- a/templates/guardians.html
+++ b/templates/guardians.html
@@ -3,16 +3,17 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-   <p> Hyrule Warriors </p>
+   <p> Guardians of the Galaxy </p>
  
-<img src="/static/hyrulewarriors.jpg" alt="Hyrule Warriors" align="left"
+<img src="/static/guardians.jpg" alt="Guardians of the Galaxy" align="left"
 style="width:500px;height:620px;">
 
 <style>
@@ -30,9 +31,8 @@ font-size: 20px;
 <br>
 
 <b>Summary:</b>
-<em> Hyrule Warriors is a hack-and-slash action game that takes the setting and
-charcaters from the Legend of Zelda series. The player takes control of many
-characters while fighting the whordes of enemys.
+<em> Guardians of the Galaxy is an American superhero film based on the Marvel
+Comics superhero team of the same name.
 
 <br>
 <br>
@@ -41,26 +41,51 @@ characters while fighting the whordes of enemys.
 
 </em>
 <b>Release Year:</b>
-<em> 19/09/2014 </em>
+<em> 21/07/2014 </em>
 
 <br>
 <br>
 <br><br>
 
-<b>Developer:</b>
-<em> Omega Force</em>
+<b>Director:</b>
+<em> James Gunn</em>
 
 <br>
 <br>
 <br>
 <br>
 
-<b> Platform(s):</b>
-<em>Wii U</em>
+<b> Starring:</b>
+<em>Chris Pratt, Zoe Saldana, Dave Bautista, Vin Diesel, Bradley Cooper</em>
 
 <br>
 <br>
-<br>
-<br>
+
+<form  action="/basket/"
+method="post">
+<input type="hidden" name="business" value="kin@kinskards.com">
+
+<input type="hidden" name="cmd" value="_cart">
+<input type="hidden" name="add" value="1">
+
+<input type="hidden" name="item_name"  value="Item">
+<input type="hidden" name="amount" value="3.95">
+<input type="hidden" name="currency_code" value="USD">
+
+<input type="hidden" name="on0" value="Color">
+  <select name="os0" id="os0">
+    <option value="Select a Platform">-- Select a Platform --</option>
+    <option value="DVD">DVD</option>
+    <option value="Blu Ray">Blu Ray</option>
+  </select>
+
+ <BR><BR><BR> <input type="image" name="submit"
+
+src="/static/basket.jpg"
+   alt="Add to Cart" width="400" height="75">
+  <img alt="" width="1" height="1"
+   src="https://ww.paypalobjects.com/en_US/i/scr/pixel.gif" > <BR>
+</form>
+
 
 {% endblock %}
