--- a/templates/matrix.html
+++ b/templates/matrix.html
@@ -3,16 +3,17 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-   <p> Halo: The Master Chief Collection </p>
+   <p> The Matrix </p>
  
-<img src="/static/halotmcc.jpg" alt="Halo: The Master Chief Collection" align="left"
+<img src="/static/matrix.jpg" alt="The Matrix" align="left"
 style="width:500px;height:620px;">
 
 <style>
@@ -30,9 +31,9 @@ font-size: 20px;
 <br>
 
 <b>Summary:</b>
-<em> Halo: The Master Chief Collection is a compilation of first-person shooter
-games in the Halo Series. The games follow the main protaganist Master Chief as
-he stops the halo rings.
+<em> The Matrix is a science fiction film that depicts a dystopian future in
+which reality as perceived by most humans is actaully a simulated reality
+called "the Matrix".
 
 <br>
 <br>
@@ -41,26 +42,51 @@ he stops the halo rings.
 
 </em>
 <b>Release Year:</b>
-<em> 11/11/2014 </em>
+<em> 31/03/1999</em>
 
 <br>
 <br>
 <br><br>
 
-<b>Developer:</b>
-<em> 343 Industries</em>
+<b>Director:</b>
+<em> The Wachowski Sisters</em>
 
 <br>
 <br>
 <br>
 <br>
 
-<b> Platform(s):</b>
-<em>Xbox One</em>
+<b> Starring:</b>
+<em>Keanu Reeves, Laurence Fishburne</em>
 
 <br>
 <br>
-<br>
-<br>
+
+<form  action="/basket/"
+method="post">
+<input type="hidden" name="business" value="kin@kinskards.com">
+
+<input type="hidden" name="cmd" value="_cart">
+<input type="hidden" name="add" value="1">
+
+<input type="hidden" name="item_name"  value="Item">
+<input type="hidden" name="amount" value="3.95">
+<input type="hidden" name="currency_code" value="USD">
+
+<input type="hidden" name="on0" value="Color">
+  <select name="os0" id="os0">
+    <option value="Select a Platform">-- Select a Platform --</option>
+    <option value="DVD">DVD</option>
+    <option value="Blu Ray">Blu Ray</option>
+  </select>
+
+ <BR><BR><BR> <input type="image" name="submit"
+
+src="/static/basket.jpg"
+   alt="Add to Cart" width="400" height="75">
+  <img alt="" width="1" height="1"
+   src="https://ww.paypalobjects.com/en_US/i/scr/pixel.gif" > <BR>
+</form>
+
 
 {% endblock %}
