--- a/templates/michaeljackson.html
+++ b/templates/michaeljackson.html
@@ -3,16 +3,17 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-   <p> Uncharted: The Nathan Drake Collection </p>
+   <p> Michael Jackson </p>
  
-<img src="/static/unchartedtndc.jpg" alt="Uncharted: The Nathan Drake Collection" align="left"
+<img src="/static/michaeljackson.jpg" alt="Michael Jackson" align="left"
 style="width:500px;height:620px;">
 
 <style>
@@ -30,9 +31,7 @@ font-size: 20px;
 <br>
 
 <b>Summary:</b>
-<em> Uncharted: The Nathan Drake Collection is a remasterd collection of the
-three original games. It follows Nathan Drake as he tours the world as a
-tresure hunter looking for various ancient treasures.
+<em> Greatest Hits
 
 <br>
 <br>
@@ -41,26 +40,44 @@ tresure hunter looking for various ancient treasures.
 
 </em>
 <b>Release Year:</b>
-<em> 27/10/2015</em>
+<em> 17/02/2003</em>
 
 <br>
 <br>
 <br><br>
 
-<b>Developer:</b>
-<em> Naughty Dog</em>
+<b>Genre:</b>
+<em> Pop</em>
 
 <br>
 <br>
 <br>
 <br>
 
-<b> Platform(s):</b>
-<em>Playstation 4</em>
+<b> Band Members:</b>
+<em>Michael Jackson</em>
 
 <br>
 <br>
-<br>
-<br>
+
+<form  action="/basket/"
+method="post">
+<input type="hidden" name="business" value="kin@kinskards.com">
+
+<input type="hidden" name="cmd" value="_cart">
+<input type="hidden" name="add" value="1">
+
+<input type="hidden" name="item_name"  value="Item">
+<input type="hidden" name="amount" value="3.95">
+<input type="hidden" name="currency_code" value="USD">
+
+ <BR><BR><BR> <input type="image" name="submit"
+
+src="/static/basket.jpg"
+   alt="Add to Cart" width="400" height="75">
+  <img alt="" width="1" height="1"
+   src="https://ww.paypalobjects.com/en_US/i/scr/pixel.gif" > <BR>
+</form>
+
 
 {% endblock %}
