--- a/templates/skyfall.html
+++ b/templates/skyfall.html
@@ -3,16 +3,17 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-   <p> Pokken Tournament </p>
+   <p> 007: Skyfall </p>
  
-<img src="/static/pokkentournament.jpg" alt="Pokken Tournament" align="left"
+<img src="/static/skyfall.jpg" alt="007: Skyfall" align="left"
 style="width:500px;height:620px;">
 
 <style>
@@ -30,10 +31,9 @@ font-size: 20px;
 <br>
 
 <b>Summary:</b>
-<em> Pokken Tournament is a fighting game in which two fighters battle against
-each other using various Pokemon with gameplay shifting between "Field Phase"
-where the Pokemon move freely around the arena, and "Dual Phase" where they
-move relative each other.
+<em> Skyfall is the 23rd James Bond film that follows Bond investigating an
+attack on MI6; the attack is part of a plot by formeer MI6 agent Raoul Silva to
+humiliate, discredit and kill M as revenge against her for betraying him.
 
 <br>
 <br>
@@ -42,26 +42,51 @@ move relative each other.
 
 </em>
 <b>Release Year:</b>
-<em> 18/03/2016 </em>
+<em> 26/10/12</em>
 
 <br>
 <br>
 <br><br>
 
-<b>Developer:</b>
-<em> Bandai Namco Studios</em>
+<b>Director:</b>
+<em> Sam Mendes</em>
 
 <br>
 <br>
 <br>
 <br>
 
-<b> Platform(s):</b>
-<em>Wii U</em>
+<b> Starring:</b>
+<em>Daniel Craig, Judi Dench, Javier Bardem</em>
 
 <br>
 <br>
-<br>
-<br>
+
+<form  action="/basket/"
+method="post">
+<input type="hidden" name="business" value="kin@kinskards.com">
+
+<input type="hidden" name="cmd" value="_cart">
+<input type="hidden" name="add" value="1">
+
+<input type="hidden" name="item_name"  value="Item">
+<input type="hidden" name="amount" value="3.95">
+<input type="hidden" name="currency_code" value="USD">
+
+<input type="hidden" name="on0" value="Color">
+  <select name="os0" id="os0">
+    <option value="Select a Platform">-- Select a Platform --</option>
+    <option value="DVD">DVD</option>
+    <option value="Blu Ray">Blu Ray</option>
+  </select>
+
+ <BR><BR><BR> <input type="image" name="submit"
+
+src="/static/basket.jpg"
+   alt="Add to Cart" width="400" height="75">
+  <img alt="" width="1" height="1"
+   src="https://ww.paypalobjects.com/en_US/i/scr/pixel.gif" > <BR>
+</form>
+
 
 {% endblock %}
