--- a/templates/starwars.html
+++ b/templates/starwars.html
@@ -3,16 +3,17 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-   <p> Star Fox Zero </p>
+   <p> Star Wars: A New Hope </p>
  
-<img src="/static/starfoxzero.jpg" alt="Star Fox Zero" align="left"
+<img src="/static/starwars.jpg" alt="Star Wars" align="left"
 style="width:500px;height:620px;">
 
 <style>
@@ -30,9 +31,9 @@ font-size: 20px;
 <br>
 
 <b>Summary:</b>
-<em> Star Fox Zero is a 3D scrolling shooter video game following Fox McCloud
-as he pilots his Arwing craft through various levels with his friends,
-encountering many enemies along the way.
+<em> Star Wars: A New Hope is an American epic space opera film following the
+Rebel Alliance, led by Princess Leia, and its attempt to destroy the Galactic
+Empire's space station.
 
 <br>
 <br>
@@ -41,26 +42,51 @@ encountering many enemies along the way.
 
 </em>
 <b>Release Year:</b>
-<em> 22/04/2016 </em>
+<em> 25/05/1977 </em>
 
 <br>
 <br>
 <br><br>
 
-<b>Developer:</b>
-<em> Nintendo EPD & PlatinumGames</em>
+<b>Director:</b>
+<em> George Lucas</em>
 
 <br>
 <br>
 <br>
 <br>
 
-<b> Platform(s):</b>
-<em>Wii U</em>
+<b> Starring:</b>
+<em>Mark Hamill, Harrison Ford, Carrie Fisher</em>
 
 <br>
 <br>
-<br>
-<br>
+
+<form  action="/basket/"
+method="post">
+<input type="hidden" name="business" value="kin@kinskards.com">
+
+<input type="hidden" name="cmd" value="_cart">
+<input type="hidden" name="add" value="1">
+
+<input type="hidden" name="item_name"  value="Item">
+<input type="hidden" name="amount" value="3.95">
+<input type="hidden" name="currency_code" value="USD">
+
+<input type="hidden" name="on0" value="Color">
+  <select name="os0" id="os0">
+    <option value="Select a Platform">-- Select a Platform --</option>
+    <option value="DVD">DVD</option>
+    <option value="Blu Ray">Blu Ray</option>
+  </select>
+
+ <BR><BR><BR> <input type="image" name="submit"
+
+src="/static/basket.jpg"
+   alt="Add to Cart" width="400" height="75">
+  <img alt="" width="1" height="1"
+   src="https://ww.paypalobjects.com/en_US/i/scr/pixel.gif" > <BR>
+</form>
+
 
 {% endblock %}
