--- a/templates/suicidesquad.html
+++ b/templates/suicidesquad.html
@@ -3,16 +3,17 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-   <p> New Super Mario Bros. U </p>
+   <p> Suicide Squad </p>
  
-<img src="/static/supermariobrosu.jpg" alt="New Super Mario Bros U" align="left"
+<img src="/static/suicidesquad.jpg" alt="Suicide Squad" align="left"
 style="width:500px;height:620px;">
 
 <style>
@@ -30,9 +31,8 @@ font-size: 20px;
 <br>
 
 <b>Summary:</b>
-<em> New Super Mario Bros. U is a side-scrolling platform game that follows
-Mario, luigi and two toads as they make thier way back to princess's peach
-castle to save her from bowser and the koopalings. 
+<em> Suicide Squad is an American superhero film based on the DC Comics
+antihero of the same name.
 
 <br>
 <br>
@@ -41,26 +41,51 @@ castle to save her from bowser and the koopalings.
 
 </em>
 <b>Release Year:</b>
-<em> 30/11/2012 </em>
+<em> 01/08/2016 </em>
 
 <br>
 <br>
 <br><br>
 
-<b>Developer:</b>
-<em> Nintendo EAD</em>
+<b>Director:</b>
+<em> David Ayer</em>
 
 <br>
 <br>
 <br>
 <br>
 
-<b> Platform(s):</b>
-<em>Wii U</em>
+<b> Starring:</b>
+<em>Will Smith, Jared Leto, Margot Robbie</em>
 
 <br>
 <br>
-<br>
-<br>
+
+<form  action="/basket/"
+method="post">
+<input type="hidden" name="business" value="kin@kinskards.com">
+
+<input type="hidden" name="cmd" value="_cart">
+<input type="hidden" name="add" value="1">
+
+<input type="hidden" name="item_name"  value="Item">
+<input type="hidden" name="amount" value="3.95">
+<input type="hidden" name="currency_code" value="USD">
+
+<input type="hidden" name="on0" value="Color">
+  <select name="os0" id="os0">
+    <option value="Select a Platform">-- Select a Platform --</option>
+    <option value="DVD">DVD</option>
+    <option value="Blu Ray">Blu Ray</option>
+  </select>
+
+ <BR><BR><BR> <input type="image" name="submit"
+
+src="/static/basket.jpg"
+   alt="Add to Cart" width="400" height="75">
+  <img alt="" width="1" height="1"
+   src="https://ww.paypalobjects.com/en_US/i/scr/pixel.gif" > <BR>
+</form>
+
 
 {% endblock %}
