--- a/templates/toystory.html
+++ b/templates/toystory.html
@@ -3,16 +3,17 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-   <p> Quantum Break </p>
+   <p> Toy Story </p>
  
-<img src="/static/quantumbreak.jpg" alt="Quantum Break" align="left"
+<img src="/static/toystory.jpg" alt="Toy Story" align="left"
 style="width:500px;height:620px;">
 
 <style>
@@ -30,11 +31,9 @@ font-size: 20px;
 <br>
 
 <b>Summary:</b>
-<em> Quantum Break is a sciencce fiction, action-adventure third person shooter
-game that centers on protagonist Jack Joyce, whos granted time manipulation
-powers after a failed time-machine experiment, as he comes into conflict with
-former friend Paul Serene over how to deal with an apocalyptic "End of Time".
-
+<em> Toy Story is a 1995 American computer-animated buddy comedy adventure film
+taking place in a world where anthropomorphic toys pretend to be lifeless
+whenever humans are present.
 <br>
 <br>
 <br>
@@ -42,26 +41,51 @@ former friend Paul Serene over how to deal with an apocalyptic "End of Time".
 
 </em>
 <b>Release Year:</b>
-<em> 05/04/2016 </em>
+<em> 22/11/1995 </em>
 
 <br>
 <br>
 <br><br>
 
-<b>Developer:</b>
-<em> Remedy Entertianment</em>
+<b>Director:</b>
+<em> John Lasseter</em>
 
 <br>
 <br>
 <br>
 <br>
 
-<b> Platform(s):</b>
-<em>Xbox One</em>
+<b> Starring:</b>
+<em>Tom Hanks, Tim Allen</em>
 
 <br>
 <br>
-<br>
-<br>
+
+<form  action="/basket/"
+method="post">
+<input type="hidden" name="business" value="kin@kinskards.com">
+
+<input type="hidden" name="cmd" value="_cart">
+<input type="hidden" name="add" value="1">
+
+<input type="hidden" name="item_name"  value="Item">
+<input type="hidden" name="amount" value="3.95">
+<input type="hidden" name="currency_code" value="USD">
+
+<input type="hidden" name="on0" value="Color">
+  <select name="os0" id="os0">
+    <option value="Select a Platform">-- Select a Platform --</option>
+    <option value="DVD">DVD</option>
+    <option value="Blu Ray">Blu Ray</option>
+  </select>
+
+ <BR><BR><BR> <input type="image" name="submit"
+
+src="/static/basket.jpg"
+   alt="Add to Cart" width="400" height="75">
+  <img alt="" width="1" height="1"
+   src="https://ww.paypalobjects.com/en_US/i/scr/pixel.gif" > <BR>
+</form>
+
 
 {% endblock %}
