--- a/templates/whiplash.html
+++ b/templates/whiplash.html
@@ -3,16 +3,17 @@
 
 {% block head %}
 
-      background-image:url(/static/greybackground.jpg);
+      background-image:url(/static/background.jpg);
       background-repeat: no-repeat;
       background-attachment: fixed;
+      background-size: cover;
 
 {% endblock %}
 
 {% block content %}
-   <p> Ratchet & Clank </p>
+   <p> Whiplash  </p>
  
-<img src="/static/ratchetandclank.jpg" alt="Ratchet and Clank" align="left"
+<img src="/static/whiplash.jpg" alt="Whiplash" align="left"
 style="width:500px;height:620px;">
 
 <style>
@@ -30,10 +31,8 @@ font-size: 20px;
 <br>
 
 <b>Summary:</b>
-<em> Ratchet & Clank is a three-dimensional platform-shooter game that is a
-re-imagining of the first game in the series. The game follows Ratchet the
-Lombax and his robotic companion Clank as they save the universe.
-
+<em> Whiplash is a 2014 American independent drama film that depicts the
+relationship between an ambitious jazz student and an abusive instructor.
 <br>
 <br>
 <br>
@@ -41,26 +40,51 @@ Lombax and his robotic companion Clank as they save the universe.
 
 </em>
 <b>Release Year:</b>
-<em> 22/04/2016</em>
+<em> 10/10/14</em>
 
 <br>
 <br>
 <br><br>
 
-<b>Developer:</b>
-<em> Insomniac Games</em>
+<b>Director:</b>
+<em> Damien Chazelle</em>
 
 <br>
 <br>
 <br>
 <br>
 
-<b> Platform(s):</b>
-<em>Playstation 4</em>
+<b> Starring:</b>
+<em>Miles Teller, J. K. Simmons</em>
 
 <br>
 <br>
-<br>
-<br>
+
+<form  action="/basket/"
+method="post">
+<input type="hidden" name="business" value="kin@kinskards.com">
+
+<input type="hidden" name="cmd" value="_cart">
+<input type="hidden" name="add" value="1">
+
+<input type="hidden" name="item_name"  value="Item">
+<input type="hidden" name="amount" value="3.95">
+<input type="hidden" name="currency_code" value="USD">
+
+<input type="hidden" name="on0" value="Color">
+  <select name="os0" id="os0">
+    <option value="Select a Platform">-- Select a Platform --</option>
+    <option value="DVD">DVD</option>
+    <option value="Blu Ray">Blu Ray</option>
+  </select>
+
+ <BR><BR><BR> <input type="image" name="submit"
+
+src="/static/basket.jpg"
+   alt="Add to Cart" width="400" height="75">
+  <img alt="" width="1" height="1"
+   src="https://ww.paypalobjects.com/en_US/i/scr/pixel.gif" > <BR>
+</form>
+
 
 {% endblock %}
