--- a/templates/holdcode.html
+++ b/templates/holdcode.html
@@ -80,3 +80,44 @@ def root_Signuplogin():
 width="100" height="100"> <BR>
 </FORM>
 <A HREF="/">Home</A>
+
+app.secret_key = 'A0Zr98j/3yX R~XHH!jmN]LWX/,?RT'
+
+valid_email = '40115101@live.napier.ac.uk'
+valid_pwhash = bcrypt.hashpw('secretpass', bcrypt.gensalt())
+
+def check_auth(email, password):
+    if(email == valid_email and
+        valid_pwhash == bcrypt.hashpw(password.encode('utf-8'), valid_pwhash)):
+            return True
+    return False
+
+def requires_login(f):
+    @wraps(f)
+    def decorated(*args, **kwargs):
+        status = session.get('logged_in', False)
+        if not status:
+            return redirect(url_for('.root'))
+        return f(*args, **kwargs)
+    return decorated
+
+@app.route('/logout/')
+def logout():
+    logout_user()
+    return redirect(url_for('index'))
+
+@app.route("/")
+@requires_login
+def secret():
+    return render_template("base.html"), 200
+
+@app.route("/Signuplogin/", methods=['GET', 'POST'])
+def root_Signuplogin():
+    if request.method == 'POST':
+        user = request.form['email']
+        pw = request.form['password']
+
+        if check_auth(request.form['email'], request.form['password']):
+            session['logged_in'] = True
+            return redirect(url_for('.secret'))
+    return render_template('Signuplogin.html'), 200
